[package]
name = "cypher-smith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "./rpc" }
rand = "0.8.4"
paste = "1.0"
clap = { version = "=3.0.0-rc.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"